# slide2text

./: .gitignore  README.md  default.nix  flake.nix  marketing.cabal
app/: Main.hs
slide2text/: slide2text.cabal
slide2text/app/: Main.hs
slide2text/src/: CLIParser.hs  Files.hs
src/: Files.hs
