cabal-version:      3.0
name:               marketing
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  Files
    build-depends:
        base ^>=4.17.2.1
        , bytestring
        , directory
        , filepath
        , microlens-platform
        , optparse-applicative
        , terminal-progress-bar
        , raw-strings-qq
        , typed-process
    hs-source-dirs:   src

executable imgocr
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
        , bytestring
        , directory
        , marketing
        , terminal-progress-bar
        , text
    hs-source-dirs:   app
